# progressive_cramming

./: .gitignore  CITATION.cff  CONTEXT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-presentation.yml
docs/adr/: 0001-static-precomputed-interactive-demo.md  0002-project-page-at-site-root-deck-at-slides.md
examples/: quickstart.py
notebooks/: progressive_cramming_demo.ipynb
page/: index.html
page/css/: page.css
page/data/: gemma3_4b.json  llama31_8b.json  manifest.json  pythia_1.4b.json  smollm2_1.7b.json  trajectories.js
page/js/: explorer.js
presentation/: README.md  index.html  video_speech.md
presentation/css/: custom.css
presentation/js/: deck.js
presentation/scripts/: build_assets.sh  make_depth_size_heatmap.py  render_artifacts.sh
presentation/tables/: depth_size_heatmap.tex  mmlu_modes.tex
scripts/: build_demo_gallery.py  build_explorer_bundle.py  diagnose_pc_consistency.py  export_token_explorer_data.py  inspect_smollm_probes.py  reconstruct_demo_gallery.py  run_cramming.py
src/progressive_cramming/: __init__.py  demo.py  run.py
src/progressive_cramming/analysis/: __init__.py
src/progressive_cramming/data/: __init__.py
src/progressive_cramming/demo/: __init__.py  _core.py  notebook.py
src/progressive_cramming/inference/: __init__.py
src/progressive_cramming/train/: __init__.py  arguments.py
src/progressive_cramming/train/trainers/: __init__.py  base.py  full_cramming.py  low_dim.py  progressive_cramming.py
src/progressive_cramming/utils/: __init__.py
