[project]
name = "progressive_cramming"
version = "0.1.0"
description = "Progressive Cramming: reliable token compression into learnable memory embeddings."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [
    { name = "Dmitrii Tarasov" },
    { name = "Lashukov" },
    { name = "Elena Goncharova" },
    { name = "Andrey Kuznetsov" },
]
keywords = ["token-compression", "cramming", "memory-embeddings", "language-models", "interpretability"]

dependencies = [
    "accelerate>=0.26.0",
    "datasets>=4.3.0",
    "numpy>=1.26",
    "scikit-learn>=1.7.2",
    "tensorboard>=2.20.0",
    "torch>=2.9.0",
    "torchvision>=0.20.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]

# Pin torch / torchvision to the CUDA 12.6 wheel channel so `uv sync` reproduces
# the GPU build deterministically. Required on hosts whose NVIDIA driver is too
# old for the default CUDA 12.8+ wheels that PyPI ships (the A100 lab box runs
# driver 12.6). Hosts without a GPU still work -- the wheels include CPU fallback.
[[tool.uv.index]]
name = "pytorch-cu126"
url = "https://download.pytorch.org/whl/cu126"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu126" }
torchvision = { index = "pytorch-cu126" }

[project.urls]
Repository = "https://github.com/FusionBrainLab/progressive_cramming"
Slides = "https://fusionbrainlab.github.io/progressive_cramming/slides/"

[project.scripts]
progressive-cramming = "progressive_cramming.run:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/progressive_cramming"]

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.3",
]

[tool.ruff]
target-version = "py311"
line-length = 128
src = ["src"]

[tool.ruff.lint]
extend-select = ["E", "I"]
ignore = ["E203", "E501"]
